# rag-ai-agent

./: .env.example  .gitignore  PROJECT_DOCUMENTATION.md  README.md  config.yml  config.yml.example  pyproject.toml  requirements.txt
app/: observability.py
app/agents/: __init__.py  action_agent.py  escalation_agent.py  factory.py  general_conversation_agent.py  kb_agent.py
app/config/: __init__.py  env.py
app/graph/: builder.py  dependencies.py  router.py  state.py
app/llm/: action_prompts.py  intent_prompts.py  prompts.py  retrieval_query_prompts.py
app/mock_api/: booking_api.py
app/services/: action_models.py  action_request.py  booking_api.py  contracts.py  escalation.py  intent.py  knowledge_base.py  models.py  query_rewriting.py  reranking.py  responses.py  router.py
cob_mock_kb_large/: README.txt  cob_appointments.json  cob_case_notes.json  cob_documents.json  cob_faqs.json  cob_kb_master.json  cob_structured_data.json
cob_mock_kb_large/high_quality_documents/: documents_manifest.json
data/: Data Migration.md  booking_store.json
processing/: __init__.py
scripts/: build_interview_demo_dataset.py  export_graph_png.py  inspect_qdrant_vectors.py  run_document_processing_pipeline.py  run_faq_processing_pipeline.py  setup_qdrant.py  test_faq_retrieval.py
tests/: test_action_request_service.py  test_config_loader.py  test_document_processing.py  test_graph_router.py  test_intent_service.py  test_kb_prompts.py  test_knowledge_base_service.py  test_query_rewriting.py
ui/: README.md  streamlit_app.py
vector_db/: contracts.py  models.py
(+1261 files in other folders)
